[package]
name = "byte_enum"
version = "0.2.0"
authors = ["recatek"]
description = "A derive macro for converting #[repr(u8)] enums to bytes and back."
edition = "2021"
repository = "https://github.com/recatek/byte_enum"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
byte_enum_derive = { version = "0.2.0", path = "byte_enum_derive" }
