[package]
name = "byte-enum-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/recatek/byte-enum"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
