[package]
name = "byte-enum"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/recatek/byte-enum"
license = "MIT OR Apache-2.0"

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]

[dependencies]
byte-enum-derive = { path = "../byte-enum-derive" }
