[package]
name = "byte-enum"
description = "A derive macro for converting #[repr(u8)] enums to bytes and back."
readme = "../README.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/recatek/byte-enum"
license = "MIT OR Apache-2.0"

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]

[dependencies]
byte-enum-derive = { path = "../byte-enum-derive" }
