[package]
name = "byte-enum"
description = "A derive macro for converting #[repr(u8)] enums to bytes and back."
readme = "../README.md"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/recatek/byte-enum"
license = "MIT OR Apache-2.0"

[dependencies]
byte-enum-derive = { version = "0.1.2", path = "../byte-enum-derive" }
