[package]
name = "byte_enum_derive"
version = "0.2.0"
authors = ["recatek"]
description = "Procedural macro implementation for byte_enum."
edition = "2021"
repository = "https://github.com/recatek/byte_enum"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
